--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,10 @@ h1 {
 }
 
 h2 {
-    font-size: 2rem; /* Slightly smaller than h1 */
+    font-size: 2rem;
+    color: #fff7c0;
+    position: relative;
+    text-transform: lowercase;
 }
 
 /* Video Container */
